# usu-py

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml  pyproject.usu
.github/workflows/: test.usu  test.yml
examples/: pre-commit-config.usu  pyproject.usu
scripts/: make_pyproject.toml  make_pyproject_toml.py  usu-converter
src/usu/: __init__.py  _errors.py  _lexer.py  _parser.py  _version.py  main.py
tests/: pyproject.usu  test_failure.py  test_implied_map.py  test_loads.py  test_official.py  test_pyproject.py  test_quotes.py  test_strings.py
