[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "usu"
description = "usu reader/writer"
authors = [
    {name = "Daylin Morgan", email = "daylinmorgan@gmail.com"},
]
dependencies = []
requires-python = ">= 3.8"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]

[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.3.3",
    "mypy>=1.3.0",
]

[tool.ruff]
select = ["F", "E", "W", "I001"]
[tool.ruff.per-file-ignores]
"src/usu/__init.__py" = ["E401"]
